--- a/JsonNet.Test.csproj
+++ b/JsonNet.Test.csproj
@@ -49,7 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Array_Test.cs" />
     <Compile Include="Factory_Test.cs" />
+    <Compile Include="Hash_Test.cs" />
     <Compile Include="JsonNet.Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValueQC.cs" />
