--- a/JsonNet.Test.csproj
+++ b/JsonNet.Test.csproj
@@ -50,12 +50,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Array_Test.cs" />
-    <Compile Include="Factory_Test.cs" />
     <Compile Include="Hash_Test.cs" />
     <Compile Include="JsonNet.Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ValueQC.cs" />
-    <Compile Include="Value_Test.cs" />
+    <Compile Include="Reader_Test.cs" />
+    <Compile Include="Writer_Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
